--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
     <h1>Hello world</h1>
+
+
+    <div>
+        <div>
+            <h2>Balls</h2>dasd
+            sda
+            <datagrid></a></datagrid>
+        </div>
+    </div>
 </body>
 </html>
