--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 
     <div>
         <div>
-            <h2>Balls</h2>dasd
-            sda
-            <datagrid></a></datagrid>
+            <h3>Balls the new game ever</h3>
         </div>
     </div>
 </body>
